client/src/index.css
@import url('https://fonts.google.com/specimen/Josefin+Sans');
:root {
    --dark-grey-background: #24282f;
    --card-border-color: rgb(140, 130, 115);
    --card-color: rgb(48, 52, 54);
    --text-color: #e8e6e3;
    --li-hover-color: #2de975;
    --green-title-color: yellowgreen;
    --wheat-color: wheat;
}

body {
    width: fit-content;
    margin: auto;
    background: var(--dark-grey-background);
    font-family: 'Courier New', Courier, monospace;
    text-align: center;
}

.centered-text {
    text-align: center;
}

.title {
    color: var(--text-color);
}

.title--green {
    background-color: var(--green-title-color);
    font-size: 2em;
    width: fit-content;
    border: none;
    border: 0.15em solid var(--card-border-color);
}

.title--details {
    font-size: 2rem;
}

.nav__item {
    display: flex;
    margin: 2rem auto 2rem auto;
    font-size: 1.5rem;
    justify-content: center;
    align-content: center;
    width: fit-content;
    height: fit-content;
}

a,
.nav__item>* {
    text-decoration: none;
    font-size: 2.2rem;
    border-radius: 10%;
    padding: 1rem;
    margin: 0.5rem;
    border-color: var( --card-color);
    color: var(--wheat-color);
}

.nav__item>* {
    border: 0.3rem solid;
    height: 1.2rem;
}

.nav__item>*:hover {
    background-color: var(--card-border-color);
}

@media screen and (max-width: 992px) {
    .nav__item>* {
        font-size: 1.2rem;
    }
}

